fixes logo, button, cross

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -8,8 +8,8 @@
 
   &__menu {
     position: absolute;
-    top: 24px;
-    left: 0;
+    top: 25px;
+    left: 3px;
     height: 12px;
     width: 18px;
     background-image: url(../images/icons&logo/menu.svg);
