--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -62,10 +62,10 @@
 
   &__title {
     font-family: "Montserrat", sans-serif;
-    font-style: normal;
+    display: block;
     font-weight: 400;
     font-size: 28px;
-    line-height: 100%;
+    line-height: 28px;
     text-align: center;
     text-decoration: none;
     color: $colorDark;
@@ -73,7 +73,9 @@
     @include hover (color $colorOrange);
 
     @include onTablet {
-      text-align: left;
+      text-align: start;
+      font-size: 36px;
+      line-height: 36px;
     }
   }
 }
