--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -4,7 +4,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   @include hover(transform scale(1.1));
-  background-image: url(../images/icons&logo/logo.svg);
+  background-image: url(../images/icons&logo/NAMU.png);
   height: 60px;
   width: 55px;
 
