--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -31,7 +31,7 @@
       height: 12px;
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: center;
+      background-position: 50%;
     }
   }
 
