--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -88,7 +88,7 @@
   }
 
   &__contact:hover {
-    color: $green-color;
+    color: $aftel-elements-color;
     font-weight: 500;
   }
 
@@ -170,6 +170,7 @@
 
     &:hover {
       border-bottom: 1px solid $accent-text-color;
+      font-weight: 500;
     }
   }
 
