--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,16 +4,16 @@
   background-repeat: no-repeat;
   background-position: right top;
   height: 100%;
-  padding-bottom: 70px;
+  padding-bottom: 20px;
 
   @include onTablet() {
     background-size: 344px 354px;
-    padding-bottom: 135px;
+    padding-bottom: 63px;
   }
 
   @include onDesktop() {
     background-size: 695px 625px;
-    padding-bottom: 345px;
+    padding-bottom: 100px;
   }
 
   &__top {
@@ -64,6 +64,31 @@
     @include onTabletAndDesktop() {
       text-align: left;
     }
+  }
+
+  &__decoration {
+    display: none;
+
+    @include onDesktop() {
+      display: inline-flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+  }
+
+  &__line {
+    background-color: $green-color;
+    width: 1px;
+    height: 70px;
+  }
+
+  &__decorative-text {
+    font-family: "IBM Plex Sans", serif;
+    font-weight: 700;
+    font-size: 14px;
+    color: $events-type-color;
+    transform: rotate(270deg);
   }
 
   &__link {
