fixed the input

--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -57,6 +57,7 @@
     outline: none;
     padding-left: 24px;
     color: $accent-text-color;
+    border-radius: 0;
 
     &::placeholder {
       color: $events-type-color;
