add interactive for all website

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -16,6 +16,8 @@
   text-transform: uppercase;
   text-decoration: none;
 
+  transition: border-color $animationDuration;
+
   &::after {
     position: absolute;
     top: 0;
@@ -32,6 +34,16 @@
     background-repeat: no-repeat;
     background-size: 24px 24px;
     background-color: $colorGreen;
+
+    transition: background-color $animationDuration;
+  }
+
+  &:hover {
+    border-color: $colorOrange;
+
+    &::after {
+      background-color: $colorOrange;
+    }
   }
 
   @include onTablet {
