--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -50,6 +50,20 @@
     }
   }
 
+  &__icon {
+    color: $colorBlack;
+
+    transition: color $animationDuration;
+
+    &:hover {
+      color: $colorOrange;
+    }
+
+    &:active {
+      color: $colorGreen;
+    }
+  }
+
   &__info {
     display: flex;
     justify-content: space-between;
@@ -187,6 +201,12 @@
     text-decoration: none;
 
     color: $colorBlackSecond;
+
+    transition: color $animationDuration;
+
+    &:hover {
+      color: $colorOrange;
+    }
   }
 
   &__button {
@@ -255,6 +275,12 @@
     text-decoration: none;
 
     color: $colorBlackSecond;
+
+    transition: color $animationDuration;
+
+    &:hover {
+      color: $colorOrange;
+    }
   }
 
   &__nav-item:nth-child(2n + 1) {
