--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,8 +1,21 @@
 .gallery {
-  display: none;
 
-  @include onDesktop {
-    display: block;
+  margin-top: 120px;
+
+  &__place {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
+  &__place-photos-photo {
+    transition: transform $animationDuration;
+
+    &:hover {
+      transform: scale(110%);
+    }
   }
 
   &__place-photos-photo--1 {
