--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,16 +1,20 @@
 .slider {
   margin-top: 150px;
 
-  @include onDesktop {
-    display: none;
+  &__slider {
+    position: relative;
+
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  &__slide {
+    width: 340px !important;
   }
 
   &__slide:not(:first-of-type) {
     margin-left: 16px;
-
-    @include onTablet {
-      margin-left: -330px;
-    }
   }
 
   &__slide-image {
@@ -25,11 +29,7 @@
 }
 
 .swiper-pagination {
-  transform: translateY(1820px);
-
-  @include onTablet {
-    transform: translateY(2750px);
-  }
+  bottom: -30px !important;
 
   &-bullet {
     width: 8px;
