--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -6,7 +6,7 @@
     @include onTablet {
       grid-column: 1 / 7;
     }
-  
+
     @include onDesktop {
       grid-column: 1 / 13;
     }
@@ -25,7 +25,7 @@
   }
 
   &__article-description {
-    
+
     @include onTablet {
       grid-column: 1 / 5;
     }
@@ -39,6 +39,8 @@
     width: 100%;
     height: 210px;
 
+    transition: transform $animationDuration;
+
     @include onTablet {
       grid-column: 1 / 7;
       height: 520px;
@@ -47,6 +49,10 @@
     @include onDesktop {
       grid-column: 1 / 8;
       height: 520px;
+    }
+
+    &:hover {
+      transform: scale(110%);
     }
   }
 
@@ -74,7 +80,7 @@
     line-height: 100%;
 
     color: $colorGray;
-    
+
     text-transform: uppercase;
 
     @include onTablet {
