--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -88,7 +88,7 @@
     height: 50px;
 
     padding: 18px 24px;
-    
+
     border: 0;
     outline: 0;
 
@@ -129,6 +129,8 @@
     outline: 0;
     cursor: pointer;
 
+    transition: background-color $animationDuration;
+
     @include onTablet {
       margin-left: 8px;
 
@@ -141,6 +143,10 @@
 
       width: 70px;
       height: 70px;
+    }
+
+    &:hover {
+      background-color: $colorGreen;
     }
   }
 }
