improve logo and gallery

--- a/src/styles/blocks/mini-blocks/logo.scss
+++ b/src/styles/blocks/mini-blocks/logo.scss
@@ -1,5 +1,11 @@
 .logo {
+  display: inline-block;
+  min-width: 60px;
+  max-width: 70px;
   height: 61px;
+  background-image: url("../images/icons/logo.svg");
+  background-position: center;
+  background-repeat: no-repeat;
 
   @include tablet {
     height: 72px;
