--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -70,6 +70,12 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+
+      transition: all 0.5s;
+      
+      &:hover {
+        transform: scale(1.1);
+      }
     }
 
     &:nth-child(1) {
