--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,17 @@
 .page {
   font-family: "IBM Plex Sans", "Inter", "Montserrat", sans-serif;
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
 }
