--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,13 @@
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+
+@import "./blocks/top-action.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/icon.scss";
 @import "./blocks/museum.scss";
-@import "./blocks/main.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/button.scss";
 
 @import "./utils/recet";
