--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -66,4 +66,12 @@
       color: $grey-color;
     }
   }
+
+  @include onDesktop {
+    &__line {
+      width: 70px;
+      height: 1px;
+      background-color: $green-color;
+    }
+  }
 }
