--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,14 +9,14 @@
     margin-bottom: 20px;
 
     @include onTablet {
-      background-size: 50% 100%;
+      background-size: 50%;
       background-position: right center;
       min-height: 384px;
       margin-bottom: 88px;
     }
 
     @include onDesktop {
-      background-size: 58% 100%;
+      background-size: 58%;
       min-height: 655px;
       margin-bottom: 200px;
     }
@@ -156,6 +156,7 @@
 
   &__decorLine {
     display: none;
+    
 
     @include onDesktop {
       display: flex;
@@ -164,6 +165,13 @@
     }
 
     &--events {
+      cursor: pointer;
+      text-decoration: none;
+      transition: color 0.5s ease;
+
+      &:hover {
+        color: $colorGray;
+      }
 
       @include onDesktop {
         position: absolute;
