--- a/src/styles/blocks/singUp.scss
+++ b/src/styles/blocks/singUp.scss
@@ -1,6 +1,6 @@
 .singUp {
   background-image: url(../images/background/background.png);
-  background-position: center;
+  background-position: top;
   background-size: cover;
   margin-bottom: 50px;
 
