--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 280px;
+  max-width: 320px;
   margin: 0 auto;
   padding: 0 20px;
 
@@ -11,5 +11,27 @@
   @include onDesktop {
     max-width: 1170px;
     padding: 0 55px;
+  }
+
+  &--current-events {
+    margin: 0;
+    max-width: unset;
+  }
+
+  &--art-museum {
+    @include onTablet {
+      margin: 0;
+      padding-right: 0;
+    }
+
+    @include onDesktop {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  &--bg {
+    margin: 0;
+    max-width: unset;
   }
 }
