--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   display: block;
   width: 18px;
-  height: 12px;
+  height: 13px;
 
   background-size: cover;
   background-position: center;
@@ -11,36 +11,32 @@
   text-decoration: none;
 
   &--menu {
-    position: absolute;
-    top: 32px;
-    left: 24px;
     background-image: url(../images/menu-opener.svg);
 
-    @include onTablet {
-      top: 45px;
-      left: 37px;
-    }
-
-    @include onDesktop {
-      left: 58px;
-    }
+    @include hover(background-image, url(../images/menu-opener-hover.svg));
   }
 
   &--cross {
     @include square(14px);
 
     background-image: url(../images/cross.svg);
+
+    @include hover(background-image, url(../images/cross-hover.svg));
   }
 
   &--facebook {
     width: 12px;
     height: 24px;
     background-image: url(../images/facebook.svg);
+
+    @include hover(background-image, url(../images/facebook-hover.svg));
   }
 
   &--instagram {
     @include square(24px);
 
     background-image: url(../images/instagram.svg);
+
+    @include hover(background-image, url(../images/instagram-hover.svg));
   }
 }
