--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,17 @@
 .menu {
-  padding: 27px 0;
+  height: 100vh;
 
-  background-color: $c-green;
+  background-color: rgba(0, 0, 0, 0.75);
+
+  &__wrapper {
+    padding: 27px 0;
+
+    background-color: $c-green;
+
+    @include onTablet {
+      padding: 40px 0;
+    }
+  }
 
   &__content {
     @include onTablet {
@@ -15,14 +25,19 @@
     }
   }
 
-  &__top {
-    margin-left: 52px;
-  }
-
   &__cross {
     position: absolute;
     top: 32px;
     left: 24px;
+
+    @include onTablet {
+      top: 45px;
+      left: 40px;
+    }
+
+    @include onDesktop {
+      left: 58px;
+    }
   }
 
   &__list {
