--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,10 @@
 
   scroll-behavior: smooth;
 
+  * {
+    box-sizing: border-box;
+  }
+
   &__body {
     margin: 0;
 
@@ -24,7 +28,7 @@
   }
 
   &__art-museum {
-    margin: 0 20px 70px;
+    margin: 20px 20px 70px;
 
     @include onTablet {
       margin: 0 0 0 34px;
@@ -58,6 +62,10 @@
     &:target {
       transform: translateY(0);
     }
+  }
+
+  &__current-events {
+    margin-bottom: 183px;
   }
 
   &__gallery {
