--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -3,6 +3,12 @@
     margin-bottom: 20px;
 
     @extend %h4;
+
+    &--menu {
+      @include onTablet {
+        margin-bottom: 0;
+      }
+    }
   }
 
   &__working,
