--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,9 +1,8 @@
 .event {
   @include hover(transform, scale(105%));
 
-  cursor: pointer;
-
   &__photo-container {
+    width: 100%;
     margin-bottom: 20px;
 
     @include onTablet {
@@ -17,6 +16,7 @@
 
   &__photo {
     width: 100%;
+    height: 100%;
   }
 
   &__top-info {
@@ -24,10 +24,11 @@
     justify-content: space-between;
     align-items: baseline;
     margin-bottom: 10px;
+    width: 280px;
 
     @include onTablet {
-      margin-bottom: 30px;
       width: 220px;
+      margin-bottom: 30px;
     }
   }
 
@@ -65,6 +66,7 @@
   }
 
   &__description {
+    max-width: 460px;
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 300;
