--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -2,6 +2,17 @@
   position: relative;
   margin-bottom: 183px;
 
+  &__container {
+
+    @include onTablet {
+      margin: 0 34px;
+    }
+
+    @include onDesktop {
+      margin: 0;
+    }
+  }
+
   @include onTablet {
     margin-bottom: 208px;
   }
@@ -12,14 +23,6 @@
   
   &__image {
     width: 100%;
-
-    @include onTablet {
-      margin: 0 34px;
-    }
-
-    @include onDesktop {
-      margin: 0;
-    }
   }
 
   &__box {
