--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -46,12 +46,22 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    transition: background-image 0.3s;
+
     &--facebook {
       background-image: url("../images/icons/Facebook.svg");
+
+      &:hover {
+        background-image: url("../images/icons/Facebook-hover.svg");
+      }
     }
 
     &--instagram {
       background-image: url("../images/icons/instagram.svg");
+
+      &:hover {
+        background-image: url("../images/icons/instagram-hover.svg");
+      }
     }
   }
 
@@ -75,8 +85,12 @@
     margin-bottom: 20px;
   }
 
-  &__time-item:hover {
-    font-weight: 700;
+  &__time-item {
+    transition: color 0.3s;
+
+    &:hover {
+      color: $color-orange;
+    }
   }
 
   &__palka {
