--- a/src/styles/exhibit.scss
+++ b/src/styles/exhibit.scss
@@ -1,5 +1,6 @@
 .exhibit {
   &__image {
+    z-index: -1;
     height: 210px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,6 +95,7 @@
   }
 
   &__title {
+    z-index: -1;
     position: relative;
     width: max-content;
     margin-bottom: 10px;
