--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -144,6 +144,8 @@
 
     color: $c-grey;
 
-    @include hover(color, $c-orange);
+    @include onDesktop {
+      @include hover(color, $c-orange);
+    }
   }
 }
