--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,12 +4,12 @@
   padding: 0 20px;
 
   @include onTablet {
-    max-width: 690px;
+    max-width: 768px;
     padding: 0 39px;
   }
 
   @include onDesktop {
-    max-width: 1170px;
+    max-width: 1280px;
     padding: 0 55px;
   }
 
@@ -32,6 +32,10 @@
 
   &--bg {
     margin: 0;
+    max-width: unset;
+  }
+
+  &--menu {
     max-width: unset;
   }
 }
