--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,5 +1,7 @@
 .event {
-  @include hover(transform, scale(105%));
+  @include onDesktop {
+    @include hover(transform, scale(105%));
+  }
 
   &__photo-container {
     width: 100%;
