--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -16,7 +16,9 @@
   &__logo {
     text-align: left;
 
-    @include hover(color, $c-orange);
+    @include onDesktop {
+      @include hover(color, $c-orange);
+    }
   }
 
   &__social-media {
