--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -13,7 +13,9 @@
   &--menu {
     background-image: url(../images/menu-opener.svg);
 
-    @include hover(background-image, url(../images/menu-opener-hover.svg));
+    @include onDesktop {
+      @include hover(background-image, url(../images/menu-opener-hover.svg));
+    }
   }
 
   &--cross {
@@ -21,7 +23,9 @@
 
     background-image: url(../images/cross.svg);
 
-    @include hover(background-image, url(../images/cross-hover.svg));
+    @include onDesktop {
+      @include hover(background-image, url(../images/cross-hover.svg));
+    }
   }
 
   &--facebook {
@@ -29,7 +33,9 @@
     height: 24px;
     background-image: url(../images/facebook.svg);
 
-    @include hover(background-image, url(../images/facebook-hover.svg));
+    @include onDesktop {
+      @include hover(background-image, url(../images/facebook-hover.svg));
+    }
   }
 
   &--instagram {
@@ -37,6 +43,8 @@
 
     background-image: url(../images/instagram.svg);
 
-    @include hover(background-image, url(../images/instagram-hover.svg));
+    @include onDesktop {
+      @include hover(background-image, url(../images/instagram-hover.svg));
+    }
   }
 }
