--- a/src/styles/blocks/list.scss
+++ b/src/styles/blocks/list.scss
@@ -47,6 +47,8 @@
 
     color: inherit;
 
-    @include hover(color, $c-orange);
+    @include onDesktop {
+      @include hover(color, $c-orange);
+    }
   }
 }
