--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -19,29 +19,37 @@
       flex-direction: row;
       justify-content: space-between;
     }
+  }
 
-    @include onDesktop {
-      justify-content: space-evenly;
-    }
+  &__top {
+    display: flex;
+    justify-content: space-between;
   }
 
   &__cross {
-    position: absolute;
-    top: 32px;
-    left: 24px;
+    display: block;
 
     @include onTablet {
-      top: 45px;
-      left: 40px;
+      margin-right: 44px;
     }
 
-    @include onDesktop {
-      left: 58px;
+    &--mobile {
+      @include onTablet {
+        display: none;
+      }
+    }
+
+    &--tab {
+      display: none;
+
+      @include onTablet {
+        display: block;
+      }
     }
   }
 
   &__list {
-    margin-bottom: 24px;
+    margin: 0 0 24px;
 
     font-weight: 500;
     font-size: 16px;
@@ -50,12 +58,12 @@
     color: $c-white;
 
     @include onTablet {
-      margin-bottom: 0;
+      margin: 0;
     }
   }
 
   &__line {
-    width: 280px;
+    width: 100%;
     height: 1px;
     margin-bottom: 24px;
 
