--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -13,11 +13,9 @@
   background-size: cover;
 
   @include onTablet {
-    position: absolute;
-    right: 0;
-    
     width: 370px;
     height: 380px;
+    margin: 0 0 100px 490px;
     padding: 20px 0;
 
     background-image: url(../images/photo/museum690.png);
@@ -26,6 +24,7 @@
   @include onDesktop {
     width: 720px;
     height: 650px;
+    margin: 0 0 200px 600px;
 
     background-image: url(../images/photo/museum1170.png);
   }
