--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -6,9 +6,9 @@
     background-image: url(../images/menu.svg);
 
     @include onTablet {
-      position: fixed;
+      position: absolute;
       top: 45px;
-      left: 40px;
+      left: 45px;
     }
 
     @include onDesktop {
