--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,9 +5,15 @@
 
   &__image {
     height: 55px;
+    margin-right: 40px;
 
     @include onTablet {
+      margin-left: -100px;
       height: 70px;
+    }
+
+    @include onDesktop {
+      margin-left: -250px;
     }
   }
 }
