--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,8 @@
 @import "../utils/normalize";
 
 .menu {
+  z-index: 1;
+
   background-color: $green-color;
   color: $just-white;
 
@@ -42,6 +44,11 @@
 
   &__link {
     color: $just-white;
+    transition: color 0.5s;
+
+    &:hover {
+      color: $hover-link;
+    }
    
     @include onDesktop {
       font-size: 22px;
