--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,3 +3,6 @@ $page-color: #e5e5e5;
 $text-color: #0f0e08;
 $grey-color: #687480;
 $just-white: #fff;
+$hover-link: blue;
+$events-color: #4e4e4e;
+$square-color: #f14a27;
