--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+@import "./utils/recet";
+@import "./utils/mixins";
+@import "./utils/variables";
+
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
@@ -7,9 +11,6 @@
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/museum.scss";
+@import "./blocks/events.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/button.scss";
-
-@import "./utils/recet";
-@import "./utils/mixins";
-@import "./utils/variables";
