--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,4 +14,11 @@
 @import "./blocks/button.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/painting.scss";
+@import "./blocks/picslider.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/form-field.scss";
 @import "./blocks/footer.scss";
