--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -7,7 +7,7 @@
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
   }
-  @include onTablet {
+  @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
   }
@@ -29,6 +29,15 @@
       @for $end from $start through 2 {
         &--mobiles-#{$start}-#{$end} {
           grid-column: #{$start} / #{$end + 1};
+        }
+      }
+    }
+
+    @for $start from 1 through 2 {
+      @for $end from $start through 2 {
+        &--mobile-#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+          padding: 0 20px;
         }
       }
     }
