problem is fixed && new block lecture was added

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -110,18 +110,10 @@
         left: 0;
         margin: 4px 10px;
 
-        @include redSquare {
-          width: 10px;
-          height: 10px;
-          background-color: $square-color;
-        }
+        @include smallSquare;
 
         @include onTablet {
-          @include redSquare {
-            margin: 4px 15px;
-            width: 15px;
-            height: 15px;
-          }
+          @include bigSquare;
         }
       }
 
