--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -15,7 +15,9 @@
   @include onTablet {
     width: 370px;
     height: 380px;
-    margin: 0 0 100px 490px;
+  
+    margin-bottom: 100px;
+    margin-left: 60%;
     padding: 20px 0;
 
     background-image: url(../images/photo/museum690.png);
@@ -24,7 +26,9 @@
   @include onDesktop {
     width: 720px;
     height: 650px;
-    margin: 0 0 200px 600px;
+
+    margin-bottom: 200px;
+    margin-left: 45%;
 
     background-image: url(../images/photo/museum1170.png);
   }
