--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -10,6 +10,14 @@
   }
 }
 
-@mixin redSquare {
-  @content;
+@mixin smallSquare {
+  width: 10px;
+  height: 10px;
+  background-color: $square-color;
+}
+
+@mixin bigSquare {
+  width: 15px;
+  height: 15px;
+  background-color: $square-color;
 }
