--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,37 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
+@import "./bloks/header.scss";
+@import "./bloks/menu.scss";
+@import "./bloks/main_content.scss";
+@import "./bloks/second.block.scss";
+@import "./bloks/third.block.scss";
+@import "./bloks/fourth.block.scss";
+@import "./bloks/footer.scss";
+
+.page {
+
+  &__body {
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  /* &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+
+    &:target {
+      transform: translateX(0);
+    }
+  } */
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Cinzel", Helvetica, sans-serif;
+  font-family: "Montserrat", Helvetica, sans-serif;
 }
