--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,5 +34,5 @@
 * {
   box-sizing: border-box;
   font-family: "Cinzel", Helvetica, sans-serif;
-  font-family: "Montserrat", Helvetica, sans-serif;
+  /* font-family: "Montserrat", Helvetica, sans-serif; */
 }
