menu time one div

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$fontMontserrat: "Montserrat", sans-serif;
+$colorTitleGray: #687480;
+$colorTextGray: #4e4e4e;
+$colorGreen: #1a5a4c;
+$colorRed: #f14a27;
+$colorWhite: #fff;
+$colorBlack: #0f0e08;
