--- a/src/styles/blocks/_schedule.scss
+++ b/src/styles/blocks/_schedule.scss
@@ -2,7 +2,7 @@
   color: $colorWhite;
 
   @include onTablet {
-    grid-column: 4 / span 4;
+    grid-column: 7 / span 6;
   }
 
   &__container {
@@ -29,15 +29,21 @@
 
     &--time {
       font-weight: 600;
+      white-space: nowrap;
     }
   }
 
   &__text {
     display: flex;
+    flex-direction: column;
     gap: 2px;
 
     &--bold {
-      font-weight: 600;
+      width: 100%;
+      &::before {
+        content: "Вихідні:";
+        font-weight: 600;
+      }
     }
   }
 }
