Solution added header and menu blocks

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,26 +1,29 @@
 .header {
-  position: relative;
-
-  @include onTablet {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 30px;
-  }
-
-  @include onDesktop {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 30px;
-  }
 
   &__container {
+    position: relative;
+
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 30px;
+    }
+
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 30px;
+      // margin: 0 auto;
+    }
+  }
+
+  &__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 23px;
+    margin: 0 23px 250px;
     padding: 9px 0 0;
     grid-column: 1 / -1;
-    margin-bottom: 250px;
 
     @include onTablet {
       display: grid;
@@ -31,11 +34,18 @@
     }
 
     @include onDesktop {
+      // max-width: 1280px;
+
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       gap: 30px;
       margin: 0 55px 119px;
     }
+
+    // @include onDesign {
+    //   max-width: 1280px;
+    //   display: flex;
+    // }
   }
 
   &__link {
