--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -15,6 +15,10 @@
     }
   }
 
+  // &__header {
+  //   margin: 0 auto;
+  // }
+
   &__main {
     margin: 0 20px;
 
@@ -43,5 +47,9 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__menu-container {
+    background-color: $colorGreen;
   }
 }
