--- a/src/styles/blocks/_schedule.scss
+++ b/src/styles/blocks/_schedule.scss
@@ -5,6 +5,10 @@
     grid-column: 7 / span 6;
   }
 
+  @include onDesktop {
+    grid-column: 8 / span 5;
+  }
+
   &__container {
     @include onTablet {
       display: flex;
@@ -24,7 +28,6 @@
 
     @include onTablet {
       margin: 0;
-      // width: 158px;
     }
 
     &--time {
