--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
   &__container {
-    background-color: $colorGreen;
+    // max-width: 1280px;
     padding: 27px 20px;
 
     @include onTablet {
@@ -8,6 +8,12 @@
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       column-gap: 10px;
+    }
+
+    @include onDesktop {
+      padding: 40px 55px 48px;
+      column-gap: 30px;
+      // margin: 0 auto;
     }
   }
 
@@ -27,6 +33,10 @@
       padding: 0;
       margin: 0;
     }
+
+    @include onDesktop {
+      grid-column: 1 / span 7;
+    }
   }
 
   &__cross {
@@ -41,6 +51,10 @@
 
     @include onTablet {
       margin: 5px 40px 0 5px;
+    }
+
+    @include onDesktop {
+      margin: 5px 107px 0 5px;
     }
   }
 
@@ -58,6 +72,12 @@
       gap: 24px 20px;
       margin-right: 38px;
     }
+
+    @include onDesktop {
+      margin-right: 102px;
+      max-width: 400px;
+      gap: 30px;
+    }
   }
 
   &__item {
@@ -65,6 +85,10 @@
 
     @include onTablet {
       width: 100px;
+    }
+
+    @include onDesktop {
+      width: 168px;
     }
   }
 
@@ -75,5 +99,9 @@
     line-height: 100%;
     color: $colorWhite;
     text-decoration: none;
+
+    @include onDesktop {
+      font-size: 22px;
+    }
   }
 }
