--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -46,7 +46,7 @@
     margin: 0 auto 70px;
 
     @include onTablet {
-      grid-column: 1 / span 3;
+      grid-column: 1 / 3;
       height: 70px;
       width: 270px;
       line-height: 70px;
