swiper doesnt work

--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -20,11 +20,11 @@
     @include onTablet {
       background-image: url(../images/photo/lecture690.png);
       height: 390px;
-      transition: transform, 0.5s;
+      // transition: transform, 0.5s;
 
-      &:hover {
-        transform: scale(1.1);
-      }
+      // &:hover {
+      //   transform: scale(1.1);
+      // }
     }
 
     @include onDesktop {
