--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
 .page {
   font-family: "IBM Plex Sans", "Inter", "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 
   &__menu {
     position: fixed;
@@ -13,5 +14,10 @@
     &:target {
       transform: translateX(0);
     }
+  }
+
+  &__item {
+    height: 100px;
+    color: blue;
   }
 }
