--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -3,22 +3,37 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
-  @include onTablet {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 30px;
-  }
+  // @include onTablet {
+  //   grid-template-columns: repeat(6, 1fr);
+  //   column-gap: 30px;
+  // }
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
   }
 
-  &__item {
-    &--1-4 {
-      grid-column: 1 / 5;
+  &--desktop {
+    display: block;
+
+    @include onDesktop {
+      display: grid;
     }
-    &--7-12 {
-      grid-column: 7 / 13;
+  }
+
+  &__item {
+    @for $start from 1 through 12 {
+      @for $end from $start through 12 {
+        &--#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+
+        &--desktop-#{$start}-#{$end} {
+          @include onDesktop {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
     }
   }
 }
