--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,5 +13,7 @@
 @import "./blocks/museum.scss";
 @import "./blocks/events.scss";
 @import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/swiper.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/button.scss";
