Solution added block current events

--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -15,11 +15,7 @@
     }
   }
 
-  // &__header {
-  //   margin: 0 auto;
-  // }
-
-  &__main {
+  &__title {
     margin: 0 20px;
 
     @include onTablet {
