--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,6 @@
 @import "blocks/title";
 @import "blocks/menu";
 @import "blocks/schedule";
+@import "blocks/actual";
+@import "blocks/place";
+@import "blocks/content";
