--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -24,6 +24,7 @@
     margin: 0 23px 250px;
     padding: 9px 0 0;
     grid-column: 1 / -1;
+    text-decoration: none;
 
     @include onTablet {
       display: grid;
@@ -41,20 +42,20 @@
       gap: 30px;
       margin: 0 55px 119px;
     }
-
-    // @include onDesign {
-    //   max-width: 1280px;
-    //   display: flex;
-    // }
   }
 
-  &__link {
+  &__open-menu {
     background-image: url(../images/menu-open.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 18px;
     height: 12px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.1, 1.1);
+    }
   }
 
   &__logo-center {
@@ -63,6 +64,8 @@
   }
 
   &__logo {
+    text-decoration: none;
+    color: $colorBlack;
     font-family: $fontMontserrat;
     font-weight: 700;
     font-size: 30px;
