--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -1,6 +1,5 @@
 .menu {
   &__container {
-    // max-width: 1280px;
     padding: 27px 20px;
 
     @include onTablet {
@@ -13,7 +12,6 @@
     @include onDesktop {
       padding: 40px 55px 48px;
       column-gap: 30px;
-      // margin: 0 auto;
     }
   }
 
@@ -22,7 +20,7 @@
     gap: 30px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     padding-bottom: 24px;
-    margin-bottom: 24px;
+    margin: 0 0 24px;
     width: max-content;
 
     @include onTablet {
@@ -65,7 +63,7 @@
     gap: 24px 28px;
     padding: 0;
     margin: 0;
-    max-width: 300px;
+    max-width: 230px;
 
     @include onTablet {
       max-width: 220px;
