--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -44,17 +44,23 @@
     max-width: 300px;
     line-height: 50px;
     margin: 0 auto 70px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.05, 1.05);
+    }
 
     @include onTablet {
       grid-column: 1 / 3;
       height: 70px;
       width: 270px;
       line-height: 70px;
+      margin-bottom: 107px;
     }
 
     @include onDesktop {
       grid-column: 3 / span 3;
-      margin-bottom: 100px;
+      margin-bottom: 347px;
     }
   }
 
@@ -80,9 +86,13 @@
   &__events {
     position: absolute;
     left: -60px;
-    bottom: 45px;
+    bottom: 280px;
     display: none;
     transform: rotate(-90deg);
+
+    &:hover {
+      transform: rotate(-90deg) scale(1.5, 1.5);
+    }
 
     @include onDesktop {
       display: inline-flex;
