--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset.scss";
+@import "./utils/vars";
+@import "./utils/fonts";
+@import "./utils/typography";
+@import "./utils/mixins";
+@import "./utils/extends";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/icon.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/art-museum.scss";
+@import "./blocks/button.scss";
