--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -4,6 +4,11 @@
     width: 102px;
     height: 9px;
 
-    color: $green-color;
+    background-color: $green-color;
+  }
+
+  &-scrollbar {
+    height: 10px;
+    margin-bottom: 20px;
   }
 }
