--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+
 @import "./blocks/container.scss";
 @import "./blocks/grid.scss";
 
@@ -13,7 +14,9 @@
 @import "./blocks/museum.scss";
 @import "./blocks/events.scss";
 @import "./blocks/lecture.scss";
-@import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+
 @import "./blocks/menu.scss";
 @import "./blocks/button.scss";
