--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -21,3 +21,13 @@
   height: 15px;
   background-color: $square-color;
 }
+
+@mixin smallOrange {
+  width: 50px;
+  height: 50px;
+}
+
+@mixin bigOrange {
+  width: 70px;
+  height: 70px;
+}
