commit for mentor

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -8,14 +8,6 @@
     }
   }
 
-  &__slide {
-    width: 340px !important;
-  }
-
-  &__slide:not(:first-of-type) {
-    margin-left: 16px;
-  }
-
   &__slide-image {
     width: 280px;
     height: 410px;
@@ -31,6 +23,8 @@
   bottom: -30px !important;
 
   &-bullet {
+    margin: 0 8px !important;
+
     width: 8px;
     height: 8px;
 
