--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -2,3 +2,6 @@
 @import "blocks/header.scss";
 @import "blocks/menu.scss";
 @import "blocks/nav.scss";
+@import "blocks/events.scss";
+@import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
