--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -20,5 +20,21 @@
     }
   }
 
+  &__events {
+    @include margin;
+  }
+
+  &__lecture {
+    margin-bottom: 170px;
+
+    @include tablet {
+      margin: 0 34px 190px;
+    }
+
+    @include desktop {
+      margin: 0 0 302px;
+    }
+  }
+
   font-family: $font-main;
 }
