--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -33,8 +33,20 @@
     grid-column-end: $tablet-end;
   }
 
-  @include desktop() {
+  @include desktop {
     grid-column-start: $desktop-start;
     grid-column-end: $desktop-end;
+  }
+}
+
+@mixin margin {
+  margin: 0 20px;
+
+  @include tablet {
+    margin: 0 34px;
+  }
+
+  @include desktop {
+    margin: 0 55px;
   }
 }
