--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -9,7 +9,7 @@
     display: block;
     width: 100%;
     height: 543px;
-    background-position: center;
+    background-position: center top;
     background-size: cover;
     margin-bottom: 41px;
 
