--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,13 @@
 @import "./utils/extends";
 
 @import "./blocks/icon.scss";
+@import "./blocks/information.scss";
+@import "./blocks/navigation.scss";
+@import "./blocks/grid.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
 @import "./blocks/art-museum.scss";
 @import "./blocks/button.scss";
+@import "./blocks/menu.scss";
