--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -1,48 +1,48 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat/Montserrat-Bold.ttf") format("ttf");
+  src: url("/fonts/Montserrat/Montserrat-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("/fonts/Montserrat/Montserrat-Regular.ttf") format("ttf");
+  src: url("/fonts/Montserrat/Montserrat-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "IBM Plex Sans";
-  src: url("/fonts/IBMPlexSans/IBMPlexSans-Bold.ttf") format("ttf");
+  src: url("/fonts/IBMPlexSans/IBMPlexSans-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "IBM Plex Sans";
-  src: url("/fonts/IBMPlexSans/IBMPlexSans-SemiBold.ttf") format("ttf");
+  src: url("/fonts/IBMPlexSans/IBMPlexSans-SemiBold.ttf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "IBM Plex Sans";
-  src: url("/fonts/IBMPlexSans/IBMPlexSans-Medium.ttf") format("ttf");
+  src: url("/fonts/IBMPlexSans/IBMPlexSans-Medium.ttf");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "IBM Plex Sans";
-  src: url("/fonts/IBMPlexSans/IBMPlexSans-Regular.ttf") format("ttf");
+  src: url("/fonts/IBMPlexSans/IBMPlexSans-Regular.ttf");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "IBM Plex Sans";
-  src: url("/fonts/IBMPlexSans/IBMPlexSans-Light.ttf") format("ttf");
+  src: url("/fonts/IBMPlexSans/IBMPlexSans-Light.ttf");
   font-weight: 300;
   font-style: normal;
 }
