--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -76,12 +76,6 @@
     }
   }
 
-  &__list-content {
-    @include onTablet {
-      display: block;
-    }
-  }
-
   &__arrow {
     display: flex;
     justify-content: right;
@@ -144,6 +138,24 @@
     @include onTablet {
       flex-direction: row;
       justify-content: space-between;
+    }
+  }
+
+  &__list-content {
+    @include onTablet {
+      display: flex;
+      flex-direction: column;
+      gap: 0;
+
+    }
+  }
+
+  &__link {
+    color: #000;
+    text-decoration: none;
+    transition: all 0.5s;
+    &:hover {
+      color: #f14a27;
     }
   }
 }
