--- a/src/styles/blocks/sub.scss
+++ b/src/styles/blocks/sub.scss
@@ -1,4 +1,6 @@
 .sub {
+  max-width: 1280px;
+  margin: 0 auto;
   @extend %imgProperty;
   padding: 88px 0 ;
   background-image: url(../images/sub.png);
