--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -55,6 +55,10 @@
       width: 150px;
       font-size: 22px;
       line-height: 100%;
+      transition: all 0.5s;
+      &:hover {
+        color: #f14a27;
+      }
     }
   }
 
@@ -100,6 +104,5 @@
   &__list-text {
     font-weight: 600;
     line-height: 21px;
-
   }
 }
