--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,12 +3,14 @@
   &__image {
     @extend %imgProperty;
     position: absolute;
+    left: 0;
     width: 100%;
     height: 300px;
     transform: scaleX(-1);
     background-image: url(../images/museum.jpg);
     z-index: -1;
     @include onTablet {
+      left: auto;
       right: 0;
       width: calc(50% - 10px);
       height: 384px;
