--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,23 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/body.scss";
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+@import "./blocks/flex.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/marker.scss";
+@import "./blocks/button.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/painting.scss";
+@import "./blocks/picslider.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/form-field.scss";
+@import "./blocks/footer.scss";
