--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -25,6 +25,18 @@
     }
   }
 
+  &__container-image {
+    position: relative;
+    margin: 0 auto;
+    max-width: 100%;
+    @include onTablet {
+      max-width: 768px;
+    }
+    @include onDesktop {
+      max-width: 1280px;
+    }
+  }
+
   &__events {
     display: none;
     @include onDesktop {
