Solution added all blocks

--- a/src/styles/blocks/_place.scss
+++ b/src/styles/blocks/_place.scss
@@ -20,6 +20,11 @@
   &__photo {
     grid-column: 1 / span 7;
     margin-bottom: 20px;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.1, 1.1);
+    }
 
     @include onTablet {
       margin-bottom: 40px;
