--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -95,7 +95,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: $colorWhite;
+    color: $colorTextMenu;
     text-decoration: none;
 
     @include onDesktop {
