--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,10 @@
 @import "blocks/actual";
 @import "blocks/place";
 @import "blocks/content";
+@import "blocks/lecture";
+@import "blocks/gallery";
+@import "blocks/slider";
+@import "blocks/subscription";
+@import "blocks/form";
+@import "blocks/contacts";
+@import "blocks/footer";
