--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,5 +3,5 @@ $colorTitleGray: #687480;
 $colorTextGray: #4e4e4e;
 $colorGreen: #1a5a4c;
 $colorRed: #f14a27;
-$colorWhite: #fff;
+$colorTextMenu: #fff;
 $colorBlack: #0f0e08;
